# cloud

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.nginx  README.md  READMI.md  docker-compose.yml  dotenv_.py  env.txt  logs.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
cloud/: cookies.py  hashers.py  models.py  serializers.py  services.py  urls_admins.py  views.py
cloud_file/: apps.py  models.py  serializers.py  urls_files.py  views.py
cloud_file/migrations/: 0001_initial.py  0002_alter_filestorage_comment_and_more.py  0003_alter_filestorage_file_path_alter_filestorage_size.py  0004_alter_filestorage_file_path_alter_filestorage_size.py
cloud_user/: __init__.py  apps.py  forms.py  hashers.py  interfaces.py  models.py  postcresbase.py  serializers.py  services.py  tasks.py  urls_users.py  validators.py  views.py
cloud_user/contribute/: controler_activate.py  hash.py  hashs.py  services.py  sessions.py  utilites.py
cloud_user/forms_more/: forms_login.py  registrations.py  user_regictration.py  user_registration.py
cloud_user/migrations/: 0001_initial.py  0002_rename_activated_indx_activated_index_and_more.py  0003_alter_userregister_last_name.py  0004_alter_userregister_first_name.py  0005_remove_userregister_is_superuser_and_more.py  0006_userregister_is_superuser_alter_userregister_email.py  0007_alter_userregister_password.py  0008_alter_userregister_password.py  (+1 more)
project/: __init__.py  csrf.py  services.py  settings.py  urls.py
swagger/: swagger.yml
(+88 files in other folders)
